--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  height: 200px;
+  height: 20vh;
   margin-bottom: 20px;
 }
 
@@ -105,6 +105,8 @@ input {
 /*progress*/
 .progress-container {
   width: 25vw;
+  min-width: 200px;
+  max-width: 300px;
   height: 50vh;
   background-color: #ddd;
   border-radius: 5px;
